# youtube-subscriptions

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  base_scraper.py  db_schema.py  debug_scrape_videos.py  devenv.nix  generate_feed.py  index.html  justfile  pyproject.toml  requirements.txt  schema.sql  scrape_channel_stats.py  scrape_videos.py  server.py  static_template.html
.github/workflows/: publish.yml
src/ytsubs/: __init__.py  base_scraper.py  cli.py  db_schema.py  debug_scrape.py  generate_feed.py  schema.sql  scrape_channel_stats.py  scrape_videos.py
